# distributed-tinkering

./: README.md  iohk.cabal  stack.yaml  test.sh  tinker.cabal
app/: Main.hs
src/Data/: Config.hs
src/Network/: Worker.hs
test/Network/: WorkerSpec.hs
