name:                tinker
version:             0.1.0.0
synopsis:            Tinkering with Cloud Haskell
description:         A Cloud Haskell protocol for reaching consensus about what set
                     of messages was received.
homepage:            https://github.com/matt-noonan/distributed-tinkering#readme
license:             BSD3
license-file:        LICENSE
author:              Matt Noonan
maintainer:          matt.noonan@gmail.com
copyright:           (c) 2017 Matt Noonan
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  default-language:    Haskell2010
  exposed-modules:     Data.Config
                     , Network.Worker
  build-depends:       base >= 4.7 && < 5
                     , mwc-random
                     , optparse-generic
                     , vector
                     , primitive
                     , distributed-process
                     , distributed-process-simplelocalnet
                     , network-transport
                     , binary
                     , binary-orphans
                     , containers
                     , mtl
                     , time
                     
executable tinker
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -O2 -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010
  build-depends:       base
                     , tinker
                     , distributed-process

test-suite tinker-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  other-modules:       Network.WorkerSpec
  build-depends:       base
                     , tinker
                     , hspec
                     , QuickCheck
                     , containers
                     , distributed-process
                     , distributed-process-simplelocalnet
                     , mwc-random
                     , vector
                     , network-transport
                     , network-transport-tcp
  ghc-options:         -threaded -O2 -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/matt-noonan/distributed-tinkering
